# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: pyci.yml
gendiff/: __init__.py  ruff.toml
gendiff/formatters/: format_identifier.py  format_json.py  format_plain.py  format_stylish.py  get_format.py  json_formatter.py  plain_formatter.py  stylish_formatter.py
gendiff/scripts/: __init__.py  file_parser.py  find_diff.py  gendiff.py  generate_diff.py  parser.py
hexlet_code.egg-info/: PKG-INFO
python_project_50.egg-info/: PKG-INFO  SOURCES.txt
tests/: expected_result_json.txt  file_1.yaml  file_2.yaml  test_gendiff.py
tests/test_data/: expected_tesult_yaml.txt  file_1.json  file_2.json
