[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests",
    "pyyaml"  # â† add this line
]

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"
parser = "gendiff.scripts.parser:main"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"