[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests",
    "pyyaml",
    "ruff<=0.9.7",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"
parser = "gendiff.scripts.parser:main"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
